--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,6 +17,17 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  /* background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
+}
+.swiper-slide {
+  position: relative;
+}
+
+.swiper-slide img {
+  transition: transform 0.5s;
+}
+
+.swiper-slide-active img {
+  transform: scale(1.05);
 }
